[project]
name = "amantra-fastapi"
version = "2.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.0",
    "fastapi>=0.135.1",
    "motor>=3.7.0",
    "orjson>=3.11.7",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.15.6",
    "vulture>=2.15",
    "bandit>=1.9.4",
    "mypy>=1.19.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

# ── Ruff (linter + formatter) ──────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = ["E501", "B008"]  # line length handled by formatter; B008 is standard FastAPI Depends pattern

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Vulture (dead code detection) ──────────────────────────────────
[tool.vulture]
paths = ["src"]
min_confidence = 80

# ── Bandit (security analysis) ─────────────────────────────────────
[tool.bandit]
targets = ["src"]
skips = ["B101"]  # skip assert warnings (used in tests)

# ── MyPy (type checking) ──────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
